--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "DEBUG=notes:* node ./bin/www",
-    "server1": "DEBUG=notes:* PORT=3001 node ./bin/www",
-    "server2": "DEBUG=notes:* PORT=3002 node ./bin/www"
+    "start": "DEBUG=notes:* node ./bin/www.mjs",
+    "server1": "DEBUG=notes:* PORT=3001 node ./bin/www.mjs",
+    "server2": "DEBUG=notes:* PORT=3002 node ./bin/www.mjs",
+    "start-fs": "DEBUG=notes:* NOTES_MODEL=fs node --experimental-modules ./bin/www.mjs",
+    "start-sequelize": "SEQUELIZE_CONNECT=models/sequelize-sqlite.yaml NOTES_MODEL=sequelize node --experimental-modules ./bin/www.mjs",
+    "start-mongodb": "MONGO_URL=mongodb://127.0.0.1:27017/MyDB MONGO_DBNAME=local NOTES_MODEL=mongodb node --experimental-modules ./bin/www.mjs"
+
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
@@ -13,10 +17,18 @@
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "feather-icons": "^4.28.0",
+    "fs-extra": "^9.0.1",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
+    "js-yaml": "^3.14.0",
+    "mongodb": "^3.5.9",
     "morgan": "~1.9.1",
-    "popper.js": "^1.16.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.1.0",
+    "popper.js": "^1.16.1",
+    "rotating-file-stream": "^2.1.3",
+    "sequelize": "^6.3.3",
+    "sqlite3": "^5.0.0"
   }
 }
